# gol

./: .gitignore  README.md  gol.cabal  stack.yaml
app/: Config.Example.hs  Main.hs  Repository.hs  Types.hs  test.html
app/templates/: foo.html  main.html
server_example/: package.json  server.js
static/static/: ui.js
static/static/easyrtc/: easyrtc.css  easyrtc.js
static/static/socketio/: socketio.js
