name:                gol
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/gol#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , bytestring
                     , scotty
                     , wai-middleware-static
                     , hastache
                     , uuid
                     , mtl
                     , aeson
                     , uri-bytestring
                     , websockets
  default-language:    Haskell2010

executable gol-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , gol
                     , text
                     , containers
                     , bytestring
                     , wai-middleware-static
                     , scotty
                     , hastache
                     , uuid
                     , mtl
                     , aeson
                     , uri-bytestring
                     , websockets
  default-language:    Haskell2010

test-suite gol-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gol
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gol
